Fix nav text to align-center with logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,10 @@ h2 {
 }
 
 #nav-text {
-    font-size: 150%;
+    font-size: 180%;
     margin-left: 5px;
+    margin-bottom: 0;
     float: right;
-	vertical-align:middle;
 }
 
 .nav-link {
